WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189364
Actively prewarm processes created for prewarm pool
https://bugs.webkit.org/show_bug.cgi?id=189364
Summary
Actively prewarm processes created for prewarm pool
Antti Koivisto
Reported
2018-09-06 12:33:56 PDT
Prewarming can speed up first page load in a process.
Attachments
patch
(20.79 KB, patch)
2018-09-06 12:56 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(20.79 KB, patch)
2018-09-06 13:14 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(20.74 KB, patch)
2018-09-06 13:15 PDT
,
Antti Koivisto
cdumez
: review+
Details
Formatted Diff
Diff
patch
(20.84 KB, patch)
2018-09-06 13:47 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(20.99 KB, patch)
2018-09-06 14:08 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-09-06 12:56:54 PDT
Created
attachment 349055
[details]
patch
EWS Watchlist
Comment 2
2018-09-06 13:00:32 PDT
Attachment 349055
[details]
did not pass style-queue: ERROR: Source/WebCore/page/ProcessWarming.cpp:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/page/ProcessWarming.cpp:33: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2018-09-06 13:14:24 PDT
Created
attachment 349058
[details]
patch
Antti Koivisto
Comment 4
2018-09-06 13:15:38 PDT
Created
attachment 349059
[details]
patch
Chris Dumez
Comment 5
2018-09-06 13:40:16 PDT
Comment on
attachment 349059
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=349059&action=review
> Source/WebKit/WebProcess/WebProcess.cpp:608 > + WebCore::ProcessWarming::prewarm();
We likely do not need the WebCore::
> Source/WebKit/WebProcess/WebProcess.h:133 > + void prewarm();
Does this really need to be public ?
Antti Koivisto
Comment 6
2018-09-06 13:47:16 PDT
Created
attachment 349066
[details]
patch
Antti Koivisto
Comment 7
2018-09-06 14:08:22 PDT
Created
attachment 349069
[details]
patch
WebKit Commit Bot
Comment 8
2018-09-06 14:37:23 PDT
Comment on
attachment 349069
[details]
patch Clearing flags on attachment: 349069 Committed
r235758
: <
https://trac.webkit.org/changeset/235758
>
WebKit Commit Bot
Comment 9
2018-09-06 14:37:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2018-09-06 14:38:23 PDT
<
rdar://problem/44197960
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug