Actively prewarm processes created for prewarm pool https://bugs.webkit.org/show_bug.cgi?id=189364

Reviewed by Chris Dumez.

Source/WebCore:

Do some basic prewarming for newly created processes.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* css/CSSDefaultStyleSheets.cpp:
(WebCore::CSSDefaultStyleSheets::loadFullDefaultStyle):
* css/CSSDefaultStyleSheets.h:
* page/Frame.cpp:
(WebCore::Frame::Frame):
* page/ProcessWarming.cpp: Added.
(WebCore::ProcessWarming::initializeNames):

Factor name initialization into a function.

(WebCore::ProcessWarming::prewarm):

Prewarm
- names
- settings (system fonts)
- user agent stylesheet
- JavaScript VM
- telephone number detection

* page/ProcessWarming.h: Added.

Source/WebKit:

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createNewWebProcess):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::prewarm):
* WebProcess/WebProcess.h:
* WebProcess/WebProcess.messages.in:


Canonical link: https://commits.webkit.org/204365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235758 268f45cc-cd09-0410-ab3c-d52691b4dbfc